@@ -108,6 +108,8 @@
        'repobrowser' command. See issue #49 for details. (Stefan)
 - NEW: Dragging the url from the repository browser combo
        box creates an url link in explorer. (Stefan)
+- NEW: Improved notice dialog after creating 
+       a repository. (Stefan)
 - BUG: Merged revisions must be counted only 
        once in stats (Stefan Fuhrmann)
 - BUG: Relative Webviewer urls didn't work from the 
